fixed button overflow

--- a/src/components/videotitle/videotitle.css
+++ b/src/components/videotitle/videotitle.css
@@ -1,6 +1,6 @@
 .title {
   top: 8vh;
-  left: 20vh;
+  left: 18vh;
   position: absolute;
 }
 .title h4 {
@@ -33,7 +33,7 @@ p {
   word-wrap: break-word;
   color: white;
   font-family: "Roboto", sans-serif;
-  font-weight: 500;
+  font-weight: 300;
   opacity: 0.8;
 }
 .subscribe-button {
